--- a/src/pages/login/login.scss
+++ b/src/pages/login/login.scss
@@ -1,15 +1,40 @@
 page-login {
  
   .login-content {
-    background: #56CA96;
- 
+    
+    background-color: #0091EB;
+    overflow:hidden;
+
+    ::-webkit-scrollbar { 
+      display: none; 
+    }
+
+    
+    .subtitle {
+      width: 100%;
+      color: #fff;
+      font-size: 1rem;
+      font-weight: 400;
+      align-items: center;
+      text-align: center;
+    }
+
+    .title{
+      color: #fff;
+      font-size: 2rem;
+      font-weight: 500;
+      padding-top: 20px;
+      align-items: center;
+      text-align: center;
+    }
+
     .logo-row {
-      padding-top: 50px;
-      padding-bottom: 20px;
+      padding-top: 10px;
+      padding-bottom: 10px;
     }
  
     .login-box {
-      background: #399F8B;
+     
       padding: 20px 20px 0px 20px;
       margin-top: 30px;
     }
@@ -49,6 +74,12 @@ page-login {
        color: #ffffff;
        font-size: 0.8em;
      }
+
+     .login-footer {
+      padding: 20px;
+      background-color: transparent;
+      background-image: linear-gradient(0deg,#fff,#fff 30%,transparent 70%);
+}
   }
  
 }
