--- a/src/pages/login/login.scss
+++ b/src/pages/login/login.scss
@@ -33,11 +33,11 @@ page-login {
       padding-bottom: 10px;
     }
  
-    .login-box {
+    // .login-box {
      
-      padding: 20px 20px 0px 20px;
-      margin-top: 30px;
-    }
+    //   //padding: 20px 20px 0px 20px;
+    //   // margin-top: 30px;
+    // }
  
     ion-row {
        align-items: center;
@@ -65,7 +65,7 @@ page-login {
      }
  
      .submit-btn {
-       background: #51CFB1;
+       background: rgba(158, 158, 158, 0.1);
        border-radius: 30px !important;
        border: 1px solid #ffffff;
      }
