--- a/src/pages/main/main.scss
+++ b/src/pages/main/main.scss
@@ -1,3 +1,25 @@
 page-main {
-
+    div::-webkit-scrollbar {
+        border:none;
+        width:0;
+        background: rgba(0,0,0,0);
+      }
+       
+      div::-webkit-scrollbar-track {
+        border:none;
+        width:0;
+        background: rgba(0,0,0,0);
+      }
+       
+      div::-webkit-scrollbar-thumb {
+        border:none;
+        width:0;
+        background: rgba(0,0,0,0);
+      }
+      .toolbar-ios ion-title {
+        width: 100%;
+      }
+      .backIcon {
+        font-size: 1.7em;
+    }
 }
